bugfix: fix code block to be able to wrap.

--- a/v2/css/main.less
+++ b/v2/css/main.less
@@ -358,6 +358,7 @@ header[role="header"] {
                 max-width: 100%;
                 overflow-x: auto;
                 position: relative;
+                white-space: pre-wrap;
             }
 
             p { margin-top: 20px; margin-bottom: 20px; margin-right: 10px; }
